solved bug where Diabetes Risk Estimation System would always return 0